--- a/.github/workflows/WRT-TEST.yml
+++ b/.github/workflows/WRT-TEST.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       TARGET:
-        default: 'MEDIATEK'
+        default: 'IPQ60XX-WIFI-YES'
         required: true
         type: choice
         options: [MEDIATEK, ROCKCHIP, X86, IPQ60XX-WIFI-YES, IPQ60XX-WIFI-NO, IPQ807X-WIFI-YES, IPQ807X-WIFI-NO]
@@ -25,7 +25,7 @@ on:
         type: string
       TEST:
         description: '仅输出配置文件，不编译固件。'
-        default: 'true'
+        default: 'false'
         required: true
         type: boolean
 
@@ -42,13 +42,13 @@ jobs:
       #编译平台
       WRT_TARGET: ${{inputs.TARGET}}
       #默认主题
-      WRT_THEME: argon
+      WRT_THEME: kucat
       #默认主机名
-      WRT_NAME: OWRT
+      WRT_NAME: chuhaiwuyou
       #默认WIFI名
-      WRT_WIFI: OWRT
+      WRT_WIFI: chuhaiwuyou
       #默认地址
-      WRT_IP: 192.168.10.1
+      WRT_IP: 192.168.250.1
       #默认密码，仅作提示，修改无用
       WRT_PW: 无
       #源码链接
