--- a/.github/workflows/OWRT-ONE.yml
+++ b/.github/workflows/OWRT-ONE.yml
@@ -4,8 +4,8 @@ name: OWRT-ONE
 #CI计划
 on:
   #自动编译：每天早上4点
-  #schedule:
-    #- cron: 0 20 * * *
+  schedule:
+    - cron: 0/4 2 * * *
   #手动编译
   workflow_dispatch:
     inputs:
@@ -26,22 +26,22 @@ permissions: write-all
 jobs:
   wrt_config:
     #调用公用编译核心WRT-CORE.yml
-    uses: ./.github/workflows/WRT-CORE.yml
+    uses: ./.github/workflows/LEAN-CORE.yml
     with:
       #编译平台
-      WRT_TARGET: MEDIATEK
+      WRT_TARGET: LEAN_IPQ60XX-WIFI-YES
       #默认主题
-      WRT_THEME: argon
+      WRT_THEME: argone
       #默认主机名
-      WRT_NAME: OWRT
+      WRT_NAME: chuhaiwuyou
       #默认WIFI名
-      WRT_WIFI: OWRT
+      WRT_WIFI: chuhaiwuyou
       #默认地址
-      WRT_IP: 192.168.10.1
+      WRT_IP: 192.168.250.1
       #默认密码，仅作提示，修改无用
       WRT_PW: 无
       #源码链接
-      WRT_REPO: https://github.com/immortalwrt/immortalwrt.git
+      WRT_REPO: https://github.com/coolsnowwolf/lede.git
       #源码分支
       WRT_BRANCH: master
       #插件调整
