--- a/.github/workflows/OWRT-ONE.yml
+++ b/.github/workflows/OWRT-ONE.yml
@@ -5,7 +5,7 @@ name: OWRT-ONE
 on:
   #自动编译：每天早上4点
   schedule:
-    - cron: 0/4 2 * * *
+    - cron: 0 20/4 * * *
   #手动编译
   workflow_dispatch:
     inputs:
