--- a/.github/workflows/OWRT-ONE.yml
+++ b/.github/workflows/OWRT-ONE.yml
@@ -5,7 +5,7 @@ name: OWRT-ONE
 on:
   #自动编译：每天早上4点
   schedule:
-    - cron: 0 20/8 * * *
+    - cron: 0 20 * * *
   #手动编译
   workflow_dispatch:
     inputs:
@@ -26,12 +26,12 @@ permissions: write-all
 jobs:
   wrt_config:
     #调用公用编译核心WRT-CORE.yml
-    uses: ./.github/workflows/LEAN-CORE.yml
+    uses: ./.github/workflows/WRT-CORE.yml
     with:
       #编译平台
-      WRT_TARGET: LEAN_IPQ60XX-WIFI-YES
+      WRT_TARGET: IPQ60XX-WIFI-YES
       #默认主题
-      WRT_THEME: argone
+      WRT_THEME: kucat
       #默认主机名
       WRT_NAME: chuhaiwuyou
       #默认WIFI名
@@ -41,9 +41,9 @@ jobs:
       #默认密码，仅作提示，修改无用
       WRT_PW: 无
       #源码链接
-      WRT_REPO: https://github.com/coolsnowwolf/lede.git
+      WRT_REPO: https://github.com/VIKINGYFY/immortalwrt.git
       #源码分支
-      WRT_BRANCH: master
+      WRT_BRANCH: main
       #插件调整
       WRT_PACKAGE: ${{inputs.PACKAGE}}
       #仅输出配置文件
